Changed icon-button background, corrected styles in seervice pages on mobile devices

--- a/src/components/serviceCarousel/index.scss
+++ b/src/components/serviceCarousel/index.scss
@@ -8,6 +8,9 @@
     overflow: hidden;
     z-index: 0;
     box-sizing: border-box;
+    @media (max-width: 868px) {
+        max-height: 100%;
+      }
 }
 
 .carousel__back,
