--- a/src/components/serviceSlide/index.scss
+++ b/src/components/serviceSlide/index.scss
@@ -35,4 +35,7 @@
     h2,p{
         text-align: center;
     }
+    @media (max-width: 868px) {
+        max-width: 270px;
+      }
 }
