--- a/src/styles/partials/_layout.scss
+++ b/src/styles/partials/_layout.scss
@@ -70,6 +70,9 @@ main {
       min-height: calc(100vh - 202.95px);
       height: 100%;
       box-sizing: border-box;
+      @media (max-width: 868px) {
+        min-height: 600px;
+      }
   }
 }
 .centered {
